feat: Enhance PWA features and update dependencies
- Remove Firebase dependency as it's no longer used.
- Add PWA manifest and meta tags for improved app experience.
- Implement service worker registration for offline capabilities.
- Update viewport meta tag for better mobile scaling.
- Refactor ThreeBackground component for a more structured digital horizon effect.
- Enhance LoginModal with email/password fields and social login simulation.
- Update landing page with new iconography and refined hero section styling.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Nebula Soft</title>
+    
+    <!-- PWA Setup -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#0a0a0a">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Manee&Son">
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/6408/6408894.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +40,7 @@
         /* Hides scrollbar but allows scrolling */
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
+        -webkit-tap-highlight-color: transparent;
       }
       body::-webkit-scrollbar {
         display: none; /* Chrome, Safari and Opera */
@@ -47,11 +57,7 @@
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
     "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.4.2",
-    "three": "https://esm.sh/three@^0.182.0",
-    "firebase/app": "https://esm.sh/firebase@11.0.2/app",
-    "firebase/auth": "https://esm.sh/firebase@11.0.2/auth",
-    "firebase/firestore": "https://esm.sh/firebase@11.0.2/firestore",
-    "firebase/": "https://esm.sh/firebase@^12.6.0/"
+    "three": "https://esm.sh/three@^0.182.0"
   }
 }
 </script>
