--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Manee&Son">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/6408/6408894.png">
+    <link rel="apple-touch-icon" href="/image/mobile-app.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
